--- a/index.html
+++ b/index.html
@@ -232,7 +232,12 @@
           Shield (+2 AC)
         </label>
       </div>
-
+      <!-- Armor Proficiency Warning -->
+      <div id="armorWarning" class="warning" hidden>
+        ⚠️ You are wearing armor or a shield you are not proficient with.
+        <br />
+        You have disadvantage on STR & DEX checks and saving throws and cannot cast spells.
+      </div>
       <p>Armor Class: <strong id="armorClass">10</strong></p>
       <p>Initiative: <strong id="initiative">+0</strong></p>
 
