--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
     <!-- ================= Spellcasting ================= -->
     <section class="panel spellcasting-panel">
       <h2>Spellcasting</h2>
+    <p id="spellcastingWarning" class="warning" hidden>
+      ⚠️ You cannot cast spells while wearing armor you are not proficient with.
+    </p>
 
       <div id="spellcastingSummary" class="spell-summary"></div>
 
@@ -244,7 +247,7 @@
       <label>
         Speed
         <input id="speed" type="number" value="30" />
-      </label>
+      </label>git
     </section>
 
   <!-- ================= DETAIL VIEW (SPA PAGE) ================= -->
