Enforce heavy armor Strength requirements with speed penalty and UI warning

--- a/index.html
+++ b/index.html
@@ -240,6 +240,13 @@
         ⚠️ You are wearing armor or a shield you are not proficient with.
         <br />
         You have disadvantage on STR & DEX checks and saving throws and cannot cast spells.
+        <!-- Strength Requirement Warning -->
+        <div id="strengthWarning" class="warning" hidden>
+          ⚠️ Your Strength is too low for this armor.
+          <br />
+          Your speed is reduced by 10 ft.
+        </div>
+
       </div>
       <p>Armor Class: <strong id="armorClass">10</strong></p>
       <p>Initiative: <strong id="initiative">+0</strong></p>
