Ui for Arcane Armorer

--- a/index.html
+++ b/index.html
@@ -245,6 +245,10 @@
           ⚠️ Your Strength is too low for this armor.
           <br />
           Your speed is reduced by 10 ft.
+          <div id="arcaneArmorNote" class="warning info" hidden>
+          🛠 Arcane Armor active — proficiency and Strength requirements are ignored.
+        </div>
+
         </div>
 
       </div>
