NGL its late i forgot wha this did

--- a/index.html
+++ b/index.html
@@ -229,6 +229,15 @@
             <option value="">— Unarmored —</option>
           </select>
         </label>
+        <div id="armorerModeBlock" hidden>
+          <label>
+            Armorer Mode
+            <select id="armorerModeSelect">
+              <option value="guardian">Guardian (Thunder Gauntlets)</option>
+              <option value="infiltrator">Infiltrator (Lightning Launcher)</option>
+            </select>
+          </label>
+        </div>
 
         <label style="margin-left: 12px;">
           <input type="checkbox" id="shieldToggle" />
