Implement Artificer Armorer modes: Guardian & Infiltrator core logic

--- a/index.html
+++ b/index.html
@@ -244,6 +244,17 @@
           Shield (+2 AC)
         </label>
       </div>
+      <div id="armorerModeBlock" hidden>
+      <strong>Arcane Armor Configuration</strong>
+      <label>
+        <input type="radio" name="armorerMode" value="guardian" />
+        Guardian
+      </label>
+      <label>
+        <input type="radio" name="armorerMode" value="infiltrator" />
+        Infiltrator
+      </label>
+    </div>
       <!-- Armor Proficiency Warning -->
       <div id="armorWarning" class="warning" hidden>
         ⚠️ You are wearing armor or a shield you are not proficient with.
