Fixed Ui modals

--- a/index.html
+++ b/index.html
@@ -264,19 +264,21 @@
         </div>
 
       </div>
-      <p>Armor Class: <strong id="armorClass">10</strong></p>
+      <<p>Armor Class: <strong id="armorClass">10</strong></p>
       <p>Initiative: <strong id="initiative">+0</strong></p>
 
       <label>
         Speed
         <input id="speed" type="number" value="30" />
-    </section>
-    <label id="flySpeedBlock" hidden>
-      Flying Speed
-      <input id="flySpeed" type="number" disabled />
-    </label>
+      </label>
 
-  <!-- ================= DETAIL VIEW (SPA PAGE) ================= -->
+      <label id="flySpeedBlock" hidden>
+        Flying Speed
+        <input id="flySpeed" type="number" disabled />
+      </label>
+      </section>
+
+        <!-- ================= DETAIL VIEW (SPA PAGE) ================= -->
   <section id="detailView" class="detail-view" hidden></section>
 
 </div>
