--- a/index.html
+++ b/index.html
@@ -265,7 +265,19 @@
             🛠 Arcane Armor active — proficiency and Strength requirements are ignored.
           </div>
         </div>
-      </div>
+      </div><div id="eldritchCannonBlock" hidden>
+      <label>
+        Eldritch Cannon
+        <select id="eldritchCannonSelect">
+          <option value="force-ballista">Force Ballista</option>
+          <option value="flamethrower">Flamethrower</option>
+          <option value="protector">Protector</option>
+        </select>
+      </label>
+
+      <div id="eldritchCannonDescription" class="info"></div>
+    </div>
+
 
       <p>Armor Class: <strong id="armorClass">10</strong></p>
       <p>Initiative: <strong id="initiative">+0</strong></p>
