Pushed Battle Smith update

--- a/index.html
+++ b/index.html
@@ -277,9 +277,21 @@
 
       <div id="eldritchCannonDescription" class="info"></div>
     </div>
+    <div id="steelDefenderBlock" hidden class="subclass-block">
+      <label>
+        Steel Defender
+        <select id="steelDefenderInfo">
+          <option value="base">Base Capabilities</option>
+          <option value="reaction">Deflect Attack (Reaction)</option>
+          <option value="arcane-jolt">Arcane Jolt Synergy</option>
+          <option value="improved">Improved Defender (Lv 15)</option>
+        </select>
+      </label>
 
+      <div id="steelDefenderDetails" class="info-box"></div>
+    </div>
 
-      <p>Armor Class: <strong id="armorClass">10</strong></p>
+          <p>Armor Class: <strong id="armorClass">10</strong></p>
       <p>Initiative: <strong id="initiative">+0</strong></p>
 
       <label>
