tool modal changes

--- a/index.html
+++ b/index.html
@@ -215,8 +215,14 @@
       <div id="featuresList"></div>
 
       <h3>Tools</h3>
-      <div id="toolsList">—</div>
     </section>
+  <div class="dropdown-section">
+    <div class="dropdown-header" id="toolsToggle">
+      Tools <span id="toolsSummary">—</span>
+    </div>
+
+    <div class="dropdown-body" id="toolsList" hidden></div>
+  </div>
 
     <!-- ================= Weapons ================= -->
     <section class="panel">
