--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
       </label>
 
       <div id="raceDetails"></div>
+      <label>
+  Languages
+  <select id="languageSelect" multiple></select>
+</label>
+
       <section class="panel">
         <h2>Background</h2>
 
@@ -227,16 +232,24 @@
       <h2>Features</h2>
       <div id="featuresList"></div>
       <div id="fighterResources" hidden class="subclass-block">
-        <h3>Fighter Features</h3>
+      <h3>Fighter Features</h3>
 
+      <div class="fighter-feature">
         <button id="secondWindBtn">Second Wind</button>
         <span id="secondWindStatus" class="muted"></span>
+      </div>
 
-        <br />
-
+      <div class="fighter-feature">
         <button id="actionSurgeBtn">Action Surge</button>
         <span id="actionSurgeStatus" class="muted"></span>
       </div>
+
+      <div class="fighter-feature">
+        <button id="indomitableBtn">Indomitable</button>
+        <span id="indomitableStatus" class="muted"></span>
+      </div>
+    </div>
+
 
       <h3>Tools</h3>
       <div id="toolsList">—</div>
