getting the UI for arcane shot ironed out

--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
     </div>
 
     <!-- Active Arcane Shot (always visible once learned) -->
+    <div id="arcaneShotUses" class="muted"></div>
     <div id="activeArcaneShotsBlock" hidden>
       <label>
         Active Arcane Shot
@@ -273,13 +274,9 @@
       <div id="arcaneShotDetailsList">—</div>
     </div>
   </div>
+  <h3>Tools</h3>
+  <div id="toolsList">—</div>
 
-  <!-- Combat UI (keep as-is) -->
-  <div class="fighter-feature">
-    <label>
-      <h3>Tools</h3>
-      <div id="toolsList">—</div>
-    </section>
 
     <!-- ================= Weapons ================= -->
     <section class="panel">
