Pushed updated spell ui for all spellcasters

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
           <option value="artificer">Artificer</option>
           <option value="fighter">Fighter</option>
           <option value="rogue">Rogue</option>
+          <option value="wizard">Wizard</option>
         </select>
 
         <!-- ➕ Class Detail -->
