Wizard main class done

--- a/index.html
+++ b/index.html
@@ -224,7 +224,14 @@
         <h3>Always Prepared Spells</h3>
         <div id="alwaysPreparedSpells"></div>
       </div>
-
+      <div id="cantripsKnownPanel">
+        <h3>Cantrips Known</h3>
+        <div id="cantripsKnownList"></div>
+      </div>
+      <div class="spell-section spellbook">
+      <h3>Spellbook</h3>
+      <div id="spellbookList">—</div>
+    </div>
       <div class="spell-section prepared-spells">
         <h3>Prepared Spells</h3>
         <div id="preparedSpells"></div>
