Bard Lore working

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
           <option value="fighter">Fighter</option>
           <option value="rogue">Rogue</option>
           <option value="wizard">Wizard</option>
+          <option value="bard">Bard</option>
         </select>
 
         <!-- ➕ Class Detail -->
@@ -232,6 +233,11 @@
       <h3>Spellbook</h3>
       <div id="spellbookList">—</div>
     </div>
+    <div class="spell-panel" id="spellsKnownPanel">
+      <h3>Spells Known</h3>
+      <div id="spellsKnownList">—</div>
+    </div>
+
       <div class="spell-section prepared-spells">
         <h3>Prepared Spells</h3>
         <div id="preparedSpells"></div>
