--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         <option value="artificer">Artificer</option>
 
         <!-- Homebrew -->
-        <option value="ostrumite-gunner">Ostrumite Gunner</option>
-        <option value="bound-vanguard">Bound Vanguard</option>
+        <option value="ostrumite-gunner">DO NOT CLICK</option>
+        <option value="bound-vanguard">DO NOT CLICK</option>
       </select>
 
         <!-- ➕ Class Detail -->
