--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
   <meta charset="UTF-8" />
   <title>D&D Character Sheet</title>
+
 
   <link rel="stylesheet" href="style.css" />
   <link
@@ -13,6 +15,11 @@
 </head>
 
 <body>
+<body>
+
+<button id="exportPdfBtn" class="primary">
+  Export Character Sheet (PDF)
+</button>
 
 <h1>D&D Character Sheet</h1>
 
