fixed some json

--- a/index.html
+++ b/index.html
@@ -423,42 +423,41 @@
           Recharges on a short rest.
         </small>
       </div>
-    <section id="weaponModsPanel" class="panel" hidden>
-      <h3>Ostrumite Gunblade (Prototype)</h3>
+<section id="weaponModsPanel" class="panel" hidden>
+  <h3>Ostrumite Gunblade (Prototype)</h3>
 
-      <div class="mod-capacity">
-        Mod Capacity:
-        <span id="modsUsed">0</span> /
-        <span id="modsMax">0</span>
-      </div>
+  <div class="mod-capacity">
+    Mod Capacity:
+    <span id="modsUsed">0</span> /
+    <span id="modsMax">0</span>
+  </div>
 
-      <div class="mod-row">
-        <label>Core</label>
-        <select data-slot="core"></select>
-      </div>
+  <!-- EQUIPPED SLOTS -->
+  <div class="mod-row">
+    <label>Core</label>
+    <select data-slot="core"></select>
+  </div>
 
-      <div class="mod-row">
-        <label>Barrel</label>
-        <select data-slot="barrel"></select>
-      </div>
+  <div class="mod-row">
+    <label>Barrel</label>
+    <select data-slot="barrel"></select>
+  </div>
 
-      <div class="mod-row">
-        <label>Blade</label>
-        <select data-slot="blade"></select>
-      </div>
+  <div class="mod-row">
+    <label>Blade</label>
+    <select data-slot="blade"></select>
+  </div>
 
-      <div class="mod-row">
-        <label>Edge</label>
-        <select data-slot="edge"></select>
-      </div>
+  <div class="mod-row">
+    <label>Edge</label>
+    <select data-slot="edge"></select>
+  </div>
 
-      <div class="mod-row">
-        <label>Stabilizer</label>
-        <select data-slot="stabilizer"></select>
-      </div>
-    </section>
-
-    </div>
+  <div class="mod-row">
+    <label>Stabilizer</label>
+    <select data-slot="stabilizer"></select>
+  </div>
+</section>
 
 <!-- ================= Manifest Energy ================= -->
       <div
