added most warlock ui and specials, soem work needed for pacts

--- a/index.html
+++ b/index.html
@@ -642,6 +642,16 @@
 
   <button id="confirmChoiceFeature" disabled>Confirm</button>
 </div>
+<div id="invocationModal" hidden class="modal">
+  <h3>Eldritch Invocation</h3>
+  <div id="invocationList" class="invocation-list"></div>
+  <button id="confirmInvocation" disabled>Confirm Invocation</button>
+</div>
+<div id="pactBoonModal" hidden class="modal">
+  <h3>Pact Boon</h3>
+  <div id="pactBoonList"></div>
+  <button id="confirmPactBoon" disabled>Confirm Pact</button>
+</div>
 
 <!-- ================= Scripts ================= -->
 <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
